--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -39,12 +39,46 @@
               Search strings
             </a>
           </li>
+          <!--Submenu import export-->
           <li class="nav-item">
-            <a class="nav-link" href="import_export">
+            <a class="nav-link" href="#import_export_Submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
               <i class="fa fa-exchange-alt"></i>
-              Import export
+               Import export
             </a>
+            <ul class="collapse list-unstyled" id="import_export_Submenu" style="padding-left: 30px;">
+                <li class="nav-item">
+                    <a class="nav-link" href="import_export_oracle_to_sqlite">
+                        <i class="fa fa-database"></i>
+                        Oracle to SQLite
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="import_export_sqlite_to_excel">
+                        <i class="fa fa-table"></i>
+                        SQLite to Excel
+                    </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="import_export_excel_to_oracle">
+                      <i class="fa fa-file-excel"></i>
+                      Excel to Oracle
+                  </a>
+                </li>                
+                <li class="nav-item">
+                  <a class="nav-link" href="import_export_sqlite_to_oracle">
+                      <i class="fa fa-arrow-right"></i>
+                      SQLite to Oracle
+                  </a>
+                </li>                
+                <li class="nav-item">
+                  <a class="nav-link" href="import_export_sqlite_viewer">
+                      <i class="fa fa-eye"></i>
+                      SQLite viewer
+                  </a>
+                </li>                
+            </ul>
           </li>
+          <!--Fine submenu-->
           <li class="nav-item">
             <a class="nav-link" href="books">                  
               <i class="fa fa-phone"></i>
@@ -121,6 +155,13 @@
             <a class="nav-link" href="download_from_server">                  
               <i class="fa fa-download"></i>
               Download an object from iAS12g
+            </a>
+          </li>     
+          <li class="nav-item">
+            <!--La chat viene fatta girare tramite altra app e viene aperta in altro tab del browser-->
+            <a class="nav-link" href="chat" target="_blank">                  
+              <i class="fa fa-comments"></i>
+              Chat
             </a>
           </li>     
         </ul>                     
